--- a/src/AdminWeb/src/app/views/emote/support-list/support-list-filter/support-list-filter.component.html
+++ b/src/AdminWeb/src/app/views/emote/support-list/support-list-filter/support-list-filter.component.html
@@ -1,25 +1,7 @@
-<c-card class="mb-3">
-  <app-card-header #header icon="cilSearch" title="Vyhledávání" />
-
-  <app-form-card-body [form]="form" [header]="header">
-    <c-row class="mb-1">
-      <c-col>
-        <app-guild-lookup formControlName="guildId" />
-      </c-col>
-    </c-row>
-  </app-form-card-body>
-
-  <c-card-footer>
-    <c-row>
-      <c-col>
-        <app-filter-store [form]="form" />
-      </c-col>
-      <c-col cCol="auto" class="d-flex align-items-end justify-content-end">
-        <app-filter-buttons
-          [disabled]="form.invalid"
-          [filterComponent]="this"
-        />
-      </c-col>
-    </c-row>
-  </c-card-footer>
-</c-card>
+<app-filter-card [form]="form" [parentFilterComponent]="this">
+  <c-row class="mb-1">
+    <c-col>
+      <app-guild-lookup formControlName="guildId" />
+    </c-col>
+  </c-row>
+</app-filter-card>
